Script tag, variables, console

--- a/src/003/demo/index.html
+++ b/src/003/demo/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick-n-Dirty Web Page</title>
-    <link rel="stylesheet" href="./styles.css">
+    <!-- <link rel="stylesheet" href="./styles.css"> -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <script defer src="./script.js"></script>
 </head>
-<body>
+<body class="container">
     <header>
         <h1>Very Quick Web Page</h1>
         <div id="top-banner"></div>
@@ -16,7 +19,7 @@
         <ul>
             <li>Something in my list</li>
             <li class="active">Something in my list</li>
-            <li>Something in my list</li>
+            <li>What if I want text that shows HTML? For example: &lt;blockquote&gt;</li>
         </ul>
     </main>
     <footer>
