Code up to the break

--- a/src/012/demo-grammar/index.html
+++ b/src/012/demo-grammar/index.html
@@ -15,7 +15,7 @@
         <li><b><code>==</code></b> &mdash; "is equal to" - equality operator</li>
         <li><b><code>===</code></b> &mdash; "is equal to" - identity operator</li>
         <li><b><code>!=</code></b> &mdash; "is not equal to" - equality operator</li>
-        <li><b><code>!===</code></b> &mdash; "is not equal to" - identity operator</li>
+        <li><b><code>!==</code></b> &mdash; "is not equal to" - identity operator</li>
         <li><b><code>&gt;</code></b> &mdash; greater than</li>
         <li><b><code>&lt;</code></b> &mdash; less than</li>
         <li><b><code>&gt;=</code></b> &mdash; greater than or equal to</li>
